# darwin

./: .project
electronics/Arduino-Sanguino/arduino-breakout/: arduino-breakout.brd  arduino-breakout.drl  arduino-breakout.pov  arduino-breakout.sch
electronics/Arduino-Sanguino/dc-motor-driver/: dc-motor-driver.brd  dc-motor-driver.drl  (+2 more)
electronics/PIC/: kicad_package_release
electronics/System-wiring/: extruder-15-pin-connector.s#1  extruder-15-pin-connector.sch
firmware/Arduino/: CHANGELOG
firmware/GCode_Interpreter/: GCode_Interpreter.pde  ThermistorTable.h  extruder.h.dist  extruder.pde  parameters.h.dist  pins.h.dist  process_string.pde  stepper_control.pde
firmware/PIC/: INSTALL  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  package_release
firmware/PIC/devices/: Makefile  Makefile.am  Makefile.in
firmware/PIC/devices/extruder_0/: Makefile  Makefile.am  Makefile.in  extruder.h  extruder0-extruder1.asm  extruder0-extruder1.lst  extruder0-extruder2.asm  extruder0-extruder2.lst  extruder0.cod  extruder0.hex  extruder0.lst  extruder0.map  extruder1.c  extruder2.c
firmware/PIC/devices/extruder_1/: Makefile  Makefile.am  Makefile.in  extruder.h  extruder1-extruder1.asm  extruder1-extruder1.lst  extruder1-extruder2.asm  extruder1-extruder2.lst  extruder1.c  extruder1.cod  extruder1.hex  extruder1.lst  extruder1.map  extruder2.c
firmware/PIC/devices/iobox/: Makefile  iobox.h  iobox1.c  iobox2.c
firmware/PIC/devices/motor/: Makefile  motor.h  motor1.c  motor2.c
firmware/PIC/devices/stepmotor/: Makefile  Makefile.am  Makefile.in  stepmotor.h  stepmotor1.c  stepmotor2.c  stepmotorx-stepmotor1.asm  stepmotorx-stepmotor1.lst  stepmotorx-stepmotor2.asm  stepmotorx-stepmotor2.lst  stepmotorx.cod  stepmotorx.hex  stepmotorx.lst  stepmotorx.map  stepmotory-stepmotor1.asm  stepmotory-stepmotor1.lst  stepmotory-stepmotor2.asm  stepmotory-stepmotor2.lst  stepmotory.cod  stepmotory.hex  stepmotory.lst  stepmotory.map  stepmotorz-stepmotor1.asm  stepmotorz-stepmotor1.lst  stepmotorz-stepmotor2.asm  stepmotorz-stepmotor2.lst  stepmotorz.cod  stepmotorz.hex  stepmotorz.lst  stepmotorz.map
firmware/PIC/share/: Makefile  Makefile.am  Makefile.in  pic14.h  serial.h  serial1.asm  serial1.c  serial1.lst  serial2.asm  serial2.c  serial2.lst
firmware/PIC/sim/: master.stc  stim.data  usartst  usartsthex
firmware/PIC/tools/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  check_loop.sh  checkmap  commtest.cc  config.h  config.h.in  config.status  configure  configure.ac  dance.sh  detect-boards.sh  poke  poke.cc  snap.cc  snap.h  snap_packet.cc  snap_packet.h  square.sh
firmware/PIC/tools/.deps/: poke.Po  snap.Po  snap_packet.Po
firmware/Sanguino/: README
mechanics/: reprap-logo.aoi
mechanics/GM3-mountings/: gm3-mountings.aoi
mechanics/bits-from-bytes-designs/: README
mechanics/cartesian-robot/: bed-template.dxf
mechanics/sky-hook/: sky-hook.aoi
(+220 files in other folders)
